--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<h1>TI-Nspire Programs</h1>
 	<div>
 		<h2>Maze Escape</h2>
-		<button><a href="../Maze Escape.zip" download>Download</a></button>
+		<button><a href="../Maze Escape.zip">Download</a></button>
 	</div>
 	<div>
 		<h2>Snake</h2>
-		<button><a href="../Snake.zip" download>Download</a></button>
+		<button><a href="../Snake.zip">Download</a></button>
 	</div>
 </body>
 
