--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	<h1>TI-Nspire Programs</h1>
 	<div>
 		<h2>Maze Escape</h2>
+		<p>A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
 	</div>
 	<div>
 		<h2>Snake</h2>
+		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
 </body>
