--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
+	<style>
+		body {
+			background-color: gray;
+		}
+		div {
+			background-color: lightgray;
+		}
+		div h2 {
+			
+		}
+		div p {
+			
+		}
+		div button {
+			
+		}
+		div button:hover {
+			pointer: cursor;
+		}
+		div button:active {
+			
+	</style>
 </head>
 
 <body>
