--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 		body {
 			background-color: gray;
 		}
+		h1 {
+			background-color: black;
+			color: whitesmoke;
+			border-radius: 8px;
+			padding: 10px;
+		}
 		div {
 			background-color: lightgray;
+			border-radius: 8px;
+			padding: 20px;
 		}
 		div h2 {
 			
