--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-	<h1>TI-Nspire Programs</h1>
+	<h1>TI-Nspire Programs 🖩</h1>
 	<div>
 		<h2>Maze Escape</h2>
 		<p>A simple game where the aim is to escape the maze.</p>
