--- a/index.html
+++ b/index.html
@@ -27,13 +27,17 @@
 			
 		}
 		div button {
-			
+			background-color: skyblue;
+			padding: 5px;
+			padding-top: 10px;
+			padding-bottom: 10px;
 		}
 		div button:hover {
+			background-color: deepskyblue;
 			pointer: cursor;
 		}
 		div button:active {
-			
+			background-color: dodgerblue;
 		}
 	</style>
 </head>
