--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
+	<link type="image/png" rel="icon" href="../calculator-icon.png" />
 	<style>
 		body {
 			background-color: gray;
@@ -43,7 +44,7 @@
 </head>
 
 <body>
-	<h1>TI-Nspire Programs 🖩</h1>
+	<h1>TI-Nspire Programs<image href="../calculator-icon.png" width="16px" height="16px"></image></h1>
 	<div>
 		<h2>Maze Escape</h2>
 		<p>A simple game where the aim is to escape the maze.</p>
