--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		}
 		div button:hover {
 			background-color: deepskyblue;
-			pointer: cursor;
+			cursor: pointer;
 		}
 		div button:active {
 			background-color: dodgerblue;
