--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
 		}
 		div button {
 			background-color: skyblue;
-			padding: 5px;
+			border: solid 2px;
+			border-color: deepskyblue;
+			border-radius: 8px;
+			padding: 7px;
 			padding-top: 10px;
 			padding-bottom: 10px;
 		}
 		div button:hover {
 			background-color: deepskyblue;
+			border-color: dodgerblue;
 			cursor: pointer;
 		}
 		div button:active {
 			background-color: dodgerblue;
+			border-color: blue;
 		}
 	</style>
 </head>
