--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
-	<link type="image/png" rel="icon" href="../calculator-icon.png" />
+	<link rel="icon" type="image/png" href="../calculator-icon.png" />
 	<style>
 		body {
 			background-color: gray;
