--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
-	<link rel="icon" type="image/png" href="../calculator-icon.png" />
+	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<style>
 		body {
 			background-color: gray;
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-	<h1>TI-Nspire Programs<image href="../calculator-icon.png" width="16px" height="16px"></image></h1>
+	<h1>TI-Nspire Programs<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32px" height="32px"></image></h1>
 	<div>
 		<h2>Maze Escape</h2>
 		<p>A simple game where the aim is to escape the maze.</p>
