--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 			border-radius: 8px;
 			padding: 10px;
 		}
-		div {
+		.program-container {
 			background-color: lightgray;
 			border-radius: 8px;
 			padding: 20px;
 		}
-		div h2 {
+		.program-container h2 {
 			
 		}
-		div p {
+		.program-container p {
 			
 		}
-		div button {
+		.program-container button {
 			background-color: skyblue;
 			border: solid 2px;
 			border-color: deepskyblue;
@@ -36,29 +36,49 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 		}
-		div button:hover {
+		.program-container button:hover {
 			background-color: deepskyblue;
 			border-color: dodgerblue;
 			cursor: pointer;
 		}
-		div button:active {
+		.program-container button:active {
 			background-color: dodgerblue;
 			border-color: blue;
+		}
+		.program-screenshots {
+			
+		}
+		.program-screenshots image {
+			width: 100px;
+			height 100px;
 		}
 	</style>
 </head>
 
 <body>
-	<h1>TI-Nspire Programs<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32px" height="32px"></image></h1>
-	<div>
+	<h1>TI-Nspire Programs</h1>
+	<div class="program-container">
 		<h2>Maze Escape</h2>
+		<div class="program-screenshots">
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Menu.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/How.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay.gif"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Wind Screen.png"></image>
+		</div>
 		<p>A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
 	</div>
 	<br>
 	<br>
-	<div>
+	<div class="program-container">
 		<h2>Snake</h2>
+		<div class="program-screenshots">
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Menu.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/How.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay #1.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay #2.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Game Over.png"></image>
+		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
