--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 	<div class="program-container">
 		<h2>Maze Escape</h2>
 		<div class="program-screenshots">
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Menu.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/How.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay.gif"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Wind Screen.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Wind Screen.png"></image>
 		</div>
 		<p>A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
@@ -73,11 +73,11 @@
 	<div class="program-container">
 		<h2>Snake</h2>
 		<div class="program-screenshots">
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Menu.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/How.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay #1.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Gameplay #2.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Game Over.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #1.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #2.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Game Over.png"></image>
 		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
