--- a/index.html
+++ b/index.html
@@ -58,20 +58,20 @@
 <body>
 	<h1>TI-Nspire Programs</h1>
 	<div class="program-container">
-		<h2>Maze Escape</h2>
+		<h2>Maze Escape v1.0</h2>
 		<div class="program-screenshots">
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Wind Screen.png"></image>
 		</div>
-		<p>A simple game where the aim is to escape the maze.</p>
+		<p>(v1.0 only contains 5 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
 	</div>
 	<br>
 	<br>
 	<div class="program-container">
-		<h2>Snake</h2>
+		<h2>Snake v1.0</h2>
 		<div class="program-screenshots">
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png"></image>
