--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
 		.program-screenshots {
 			
 		}
-		.program-screenshots image {
-			width: 100px;
-			height: 100px;
-		}
 	</style>
 </head>
 
@@ -60,10 +56,10 @@
 	<div class="program-container">
 		<h2>Maze Escape v1.0</h2>
 		<div class="program-screenshots">
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Wind Screen.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Wind Screen.png" width="100px" height="100px"></image>
 		</div>
 		<p>(v1.0 only contains 5 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
@@ -73,11 +69,11 @@
 	<div class="program-container">
 		<h2>Snake v1.0</h2>
 		<div class="program-screenshots">
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #1.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #2.png"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Game Over.png"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #1.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #2.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Game Over.png" width="100px" height="100px"></image>
 		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
