--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png" width="100px" height="100px"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png" width="100px" height="100px"></image>
 			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif" width="100px" height="100px"></image>
-			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Wind Screen.png" width="100px" height="100px"></image>
+			<image href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Win Screen.png" width="100px" height="100px"></image>
 		</div>
 		<p>(v1.0 only contains 5 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
