--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 	<div class="program-container">
 		<h2>Maze Escape v1.0</h2>
 		<div class="program-screenshots">
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Win Screen.png" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png" alt="Menu Screenshot" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png" alt="How Screenshot" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay.gif" alt="Gamplay Gif" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Win Screen.png" alt="Win Screen Screenshot" width="160px" height="120px"></img>
 		</div>
 		<p>(v1.0 only contains 5 levels, expect more levels in future updates.) A simple game where the aim is to escape the maze.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape.zip"><button>Download</button></a>
@@ -69,11 +69,11 @@
 	<div class="program-container">
 		<h2>Snake v1.0</h2>
 		<div class="program-screenshots">
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #1.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #2.png" width="160px" height="120px"></img>
-			<img href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Game Over.png" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Menu.png" alt="Menu Screenshot" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/How.png" alt="How Screenshot" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #1.png" alt="Gamplay Screenshot #1" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Gameplay #2.png" alt="Gameplay Screenshot #2" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Maze Escape Screenshots/Game Over.png" alt="Game Over Screenshot" width="160px" height="120px"></img>
 		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
