--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 		<div class="program-screenshots">
 			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Menu.png" alt="Menu Screenshot" width="160px" height="120px"></img>
 			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/How.png" alt="How Screenshot" width="160px" height="120px"></img>
-			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay 1.png" alt="Gamplay Screenshot #1" width="160px" height="120px"></img>
-			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay 2.png" alt="Gameplay Screenshot #2" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay 1.png" alt="Gamplay Screenshot 1" width="160px" height="120px"></img>
+			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Gameplay 2.png" alt="Gameplay Screenshot 2" width="160px" height="120px"></img>
 			<img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake Screenshots/Game Over.png" alt="Game Over Screenshot" width="160px" height="120px"></img>
 		</div>
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
