--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
+	<nav>
+		<a href="https://github.com/Matt-DESTROYER/TI-Nspire-Programs">Source code</a>
+	</nav>
 </body>
 
 </html>
