--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
 		.program-screenshots {
 			
 		}
+		.footer {
+			background-color: black;
+			color: whitesmoke;
+			border-radius: 8px;
+			padding: 10px;
+		}
 	</style>
 </head>
 
@@ -78,9 +84,9 @@
 		<p>A recreationg of the classic arcade game, Snake, for TI-Nspire calculators.</p>
 		<a href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/Snake.zip"><button>Download</button></a>
 	</div>
-	<h1>
+	<div class="footer">
 		<a href="https://github.com/Matt-DESTROYER/TI-Nspire-Programs">Source code</a>
-	</h1>
+	</div>
 </body>
 
 </html>
