--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 
 <body>
 	<h1>TI-Nspire Programs <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
+	<br>
+	<br>
+	<div>
+		<p>(Instructions on usage can be found in the zipped folder that is downloaded when you click any of the download buttons.)</p>
+	</div>
+	<br>
+	<br>
 	<div class="program-container">
 		<h2>Maze Escape v1.0</h2>
 		<div class="program-screenshots">
