--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<h1>TI-Nspire Programs <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
 	<br>
 	<br>
-	<div>
+	<div class="program-container">
 		<p>(Instructions on usage can be found in the zipped folder that is downloaded when you click any of the download buttons.)</p>
 	</div>
 	<br>
