--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <body>
 	<h1>TI-Nspire Programs <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
-	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;">
+	<div style="background-color: lightgray;border-radius: 8px;padding: 10px;padding-left: 20px;padding-right: 20px;">
 		<p>(Instructions on usage can be found in the zipped folder that is downloaded when you click any of the download buttons.)</p>
 	</div>
 	<br>
