--- a/index.html
+++ b/index.html
@@ -6,55 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<style>
-		body {
-			background-color: gray;
-		}
-		h1 {
-			background-color: black;
-			color: whitesmoke;
-			border-radius: 8px;
-			padding: 10px;
-		}
-		.program-container {
-			background-color: lightgray;
-			border-radius: 8px;
-			padding: 20px;
-		}
-		.program-container h2 {
-			
-		}
-		.program-container p {
-			
-		}
-		.program-container button {
-			background-color: skyblue;
-			border: solid 2px;
-			border-color: deepskyblue;
-			border-radius: 8px;
-			padding: 7px;
-			padding-top: 10px;
-			padding-bottom: 10px;
-		}
-		.program-container button:hover {
-			background-color: deepskyblue;
-			border-color: dodgerblue;
-			cursor: pointer;
-		}
-		.program-container button:active {
-			background-color: dodgerblue;
-			border-color: blue;
-		}
-		.program-screenshots {
-			
-		}
-		.footer {
-			background-color: black;
-			color: whitesmoke;
-			border-radius: 8px;
-			padding: 10px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="../CSS/default.css" />
 </head>
 
 <body>
