--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<line rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css" />
+	<style rel="stylesheet" type="text/css" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css"></style>
 </head>
 
 <body>
