--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>TI-Nspire Programs</title>
+	<title>TI-Nspire Programs - Maze Escape Level Editor</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
 	<style rel="stylesheet" type="text/css" src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/CSS/default.css"></style>
 </head>
 
 <body>
-	<h1>TI-Nspire Programs <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
+	<h1>TI-Nspire Programs - Maze Escape Level Editor <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
 	
 </body>
 
