--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" src="../CSS/default.css" />
+	<style rel="stylesheet" type="text/css" src="../CSS/default.css"><style/>
 </head>
 
 <body>
