--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>TI-Nspire Programs - Maze Escape Level Editor</title>
 	<link rel="icon" type="image/png" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" />
-	<link rel="stylesheet" type="text/css" href="../CSS/default.css" />
+	<link rel="stylesheet" type="text/css" href="https://Matt-DESTROYER.github.io/TI-Nspire-Programs//CSS/default.css" />
 </head>
 
 <body>
