--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -11,7 +11,118 @@
 
 <body>
 	<h1>TI-Nspire Programs - Maze Escape Level Editor <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
-	
+	<nav>
+		<button id="reset">Reset</button>
+	</nav>
+	<canvas id="screen"></canvas>
+	<script>
+		const canvas = document.getElementById("canvas");
+		const ctx = canvas.getContext("2d", { alpha: false });
+		
+		canvas.width = window.innerWidth - 200;
+		canvas.height = window.innerHeight - 200;
+		
+		const Input = {};
+		canvas.addEventListener("mousemove", (e) => {
+			e = e || window.event;
+			Input.mouseX = e.clientX;
+			Input.mouseY = e.clientY;
+		});
+		
+		let tool = "#";
+		
+		let grid = [
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                ",
+			"                                "
+		];
+		
+		document.getElementById("reset").addEventListener("click", () => {
+			grid = [
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                ",
+				"                                "
+			];
+		});
+		
+		canvas.addEventListener("mousedown", () => {
+			Input.mouseDown = true;
+		});
+		
+		canvas.addEventListener("mouseup", () => {
+			Input.mouseDown = false;
+		});
+		
+		function render() {
+			if (Input.mouseDown) {
+				grid[~~(Input.mouseY / canvas.width * 32)][~~(Input.mouseX / canvas.height * 20)] = tool;
+				ctx.clearRect(0, 0, canvas.width, canvas.height);
+				ctx.moveTo(0, 0);
+				ctx.lineTo(canvas.width, 0);
+				for (let i = 1; i < 32; i++) {
+					ctx.moveTo(i * canvas.width / 32, 0);
+					ctx.lineTo(i * canvas.width / 32, canvas.height);
+				}
+				ctx.moveTo(0, 0);
+				ctx.lineTo(0, canvas.height);
+				for (let i = 1; i < 20; i++) {
+					ctx.moveTo(0, i * canvas.height / 20);
+					ctx.lineTo(canvas.height, i * canvas.height / 20);
+				}
+				for (let y = 0; y < grid.length; y++) {
+					for (let x = 0; x < grid[y].length; x++) {
+						if (grid[y][x] === "#") {
+							ctx.fillStyle = "black";
+							ctx.fillRect(x * 32, y * 20, 32, 20);
+						} else if (grid[y][x] === "@") {
+							ctx.fillStyle = "blue";
+							ctx.fillRect(x * 32, y * 20, 32, 20);
+						} else if (grid[y][x] === "*") {
+							ctx.fillStyle = "green";
+							ctx.fillRect(x * 32, y * 20, 32, 20);
+						}
+					}
+				}
+			}
+			window.requestAnimationFrame(render);
+		}
+		
+		window.requestAnimationFrame(render);
+	</script>
 </body>
 
 </html>
