--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -18,6 +18,7 @@
 </body>
 
 <script>
+(function() {
 	const canvas = document.getElementById("canvas");
 	const ctx = canvas.getContext("2d", { alpha: false });
 	
@@ -125,6 +126,7 @@
 	}
 	
 	window.requestAnimationFrame(render);
+})();
 </script>
 
 </html>
