--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -17,7 +17,7 @@
 	<canvas id="screen"></canvas>
 </body>
 
-<script>
+<script type="text/javascript" defer>
 (function() {
 	const canvas = document.getElementById("canvas");
 	const ctx = canvas.getContext("2d", { alpha: false });
