--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -17,9 +17,9 @@
 	<canvas id="screen"></canvas>
 </body>
 
-<script type="text/javascript" defer>
+<script type="text/javascript">
 (function() {
-	const canvas = document.getElementById("canvas");
+	const canvas = document.getElementById("screen");
 	const ctx = canvas.getContext("2d", { alpha: false });
 	
 	canvas.width = window.innerWidth - 200;
