--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -94,7 +94,8 @@
 	function render() {
 		if (Input.mouseDown) {
 			grid[~~(Input.mouseY / canvas.width * 32)][~~(Input.mouseX / canvas.height * 20)] = tool;
-			ctx.clearRect(0, 0, canvas.width, canvas.height);
+			ctx.fillStyle = "white";
+			ctx.fillRect(0, 0, canvas.width, canvas.height);
 			ctx.moveTo(0, 0);
 			ctx.lineTo(canvas.width, 0);
 			for (let i = 1; i < 32; i++) {
