--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -15,7 +15,7 @@
 		<button id="reset">Reset</button>
 	</nav>
 	<br>
-	<canvas id="screen"></canvas>
+	<canvas id="screen" style="border-radius: 10px;"></canvas>
 </body>
 
 <script type="text/javascript">
