--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -14,8 +14,7 @@
 	<nav>
 		<button id="reset">Reset</button>
 	</nav>
-	<br>
-	<canvas id="screen" style="border-radius: 10px;"></canvas>
+	<canvas id="screen"></canvas>
 </body>
 
 <script type="text/javascript">
@@ -95,8 +94,7 @@
 	function render() {
 		if (Input.mouseDown) {
 			grid[~~(Input.mouseY / canvas.width * 32)][~~(Input.mouseX / canvas.height * 20)] = tool;
-			ctx.fillStyle = "white";
-			ctx.fillRect(0, 0, canvas.width, canvas.height);
+			ctx.clearRect(0, 0, canvas.width, canvas.height);
 			ctx.moveTo(0, 0);
 			ctx.lineTo(canvas.width, 0);
 			for (let i = 1; i < 32; i++) {
