--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -14,7 +14,7 @@
 	<nav>
 		<button id="reset">Reset</button>
 	</nav>
-	<canvas id="screen"></canvas>
+	<canvas id="screen" style="border-radius: 15px;"></canvas>
 </body>
 
 <script type="text/javascript">
