--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -90,7 +90,7 @@
 		];
 	});
 	
-	document.getElementById("tool").addEventListener("change", (e) => {
+	document.getElementById("tool").addEventListener("input", (e) => {
 		e = e || window.event;
 		console.log(e.target);
 		console.log(e.target.value);
