--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -14,7 +14,7 @@
 	<h1>TI-Nspire Programs - Maze Escape Level Editor <img src="https://Matt-DESTROYER.github.io/TI-Nspire-Programs/calculator-icon.png" width="32" height="32"></img></h1>
 	<nav>
 		<button id="reset">Reset</button>
-		<label>Tool</label>
+		<label> Tool: </label>
 		<select id="tool" value="Solid Wall">
 			<option value="Player Spawn">Player Spawn</option>
 			<option value="Level Finish">Level Finish</option>
