--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -29,8 +29,8 @@
 	const canvas = document.getElementById("screen");
 	const ctx = canvas.getContext("2d", { alpha: false });
 	
-	canvas.width = window.innerWidth - 100;
-	canvas.height = window.innerHeight - 200;
+	canvas.width = 320;
+	canvas.height = 240;
 	
 	const Input = {};
 	
