--- a/Maze-Escape-Level-Editor/index.html
+++ b/Maze-Escape-Level-Editor/index.html
@@ -83,7 +83,8 @@
 	});
 	
 	function render() {
-		ctx.clearRect(0, 0, canvas.width, canvas.height);
+		ctx.fillStyle = "#FFFFFF";
+		ctx.fillRect(0, 0, canvas.width, canvas.height);
 		for (let y = 0; y <= 24; y++) {
 			ctx.moveTo(0, y * canvas.height / 20);
 			ctx.lineTo(canvas.height, y * 24);
